--- a/externa-k8s/flask.yaml
+++ b/externa-k8s/flask.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: flask
-          image: yagolima/ext-k8s
+          image: yagolima/ext-k8s:externa-k8s
